--- a/赤坂君インターン.md
+++ b/赤坂君インターン.md
@@ -20,6 +20,7 @@
 |:-----------|------------:|:------------:|
 | [メールアドレス](https://mail.google.com) | akasaka@catalyst-system.jp | This |
 | [ChatWork](https://www.chatwork.com) | akasaka@catalyst-system.jp | This |
+| [TeamHackベーシック認証](https://teamhack.io) | teamhack-user-0001 | tP6deX5bj5CtHNeFB6hJ48zM2r8iKW74 |
 | [TeamHack](https://teamhack.io) | akasaka@catalyst-system.jp | This |
 | [Slack](https://catalyst-system.slack.com/) | akasaka@catalyst-system.jp | 自分でパスワード設定 |
 | [Gitlab](https://git.infrastructure.jp/) | akasaka | This |
