--- a/赤坂君インターン.md
+++ b/赤坂君インターン.md
@@ -18,12 +18,12 @@
 ## アカウント情報
 | アカウント名 | ID | Password |
 |:-----------|------------:|:------------:|
-| [メールアドレス](https://mail.google.com) | akasaka@catalyst-system.jp | This |
-| [ChatWork](https://www.chatwork.com) | akasaka@catalyst-system.jp | This |
+| [メールアドレス](https://mail.google.com) | akasaka.cstalyst.system@gmail.com | xa28RewuRjnP |
+| [ChatWork](https://www.chatwork.com) | akasaka.cstalyst.system@gmail.com | Y7g57ZWJ7WtabF34 |
 | [TeamHackベーシック認証](https://teamhack.io) | teamhack-user-0001 | tP6deX5bj5CtHNeFB6hJ48zM2r8iKW74 |
-| [TeamHack](https://teamhack.io) | akasaka@catalyst-system.jp | This |
-| [Slack](https://catalyst-system.slack.com/) | akasaka@catalyst-system.jp | 自分でパスワード設定 |
-| [Gitlab](https://git.infrastructure.jp/) | akasaka | This |
+| [TeamHack](https://teamhack.io) | akasaka.cstalyst.system@gmail.com | fTjY8zbRqzFZPa6i |
+| [Slack](https://catalyst-system.slack.com/) | akasaka.cstalyst.system@gmail.com | k9DuEQC2cr56dPnt |
+| [Gitlab](https://git.infrastructure.jp/) | akasaka | iySY9cSJ6EarNUwv |
 
 ## パソコンについて
 当社から貸し出します。研修に最低限必要なブラウザやエディターはインストール済みです。  
